fixed modal padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,6 @@ a.animated-button.thar-three:hover {
 	/*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
 }
 
-
 .btn.focus, .btn:focus,
 .btn-block:focus, 
 .animated-button:focus, 
@@ -1109,9 +1108,8 @@ margin: 14px 0 37px 0;
 
 .spinner {
   height: 36px;
-  width: 320px;
+  width: 300px;
   top: -12px;
-  margin: 1.2em 0;	
 }
 .spinner input {
   text-align: left;
@@ -1243,22 +1241,18 @@ display:none;
 	width:  200px;
 }
 
-/* Credit to bootsnipp.com for the css for the color graph */
-/*.colorgraph {
-  height: 5px;
-  border-top: 0;
-  background: #c4e17f;
-  border-radius: 5px;
-  background-image: -webkit-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
-  background-image: -moz-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
-  background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
-  background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);*/
-}
+/*================
+  MODAL - Add Event
+==================*/
 
+/* Extra Small Devices, Phones */ 
+    @media only screen and (max-width : 620px) {
+			
+			.card-block {
+				padding: 0.2rem;
+			}
 
-
-
-
+    }
 
 
 
